# dbt_duckdb

./: pyproject.toml
